--- a/doc/fr_FR/partie_3.asciidoc
+++ b/doc/fr_FR/partie_3.asciidoc
@@ -1,5 +1,21 @@
 '''
 ==== Gestionnaire d'Images
+Lors de nos pérégrinations sur le mode Design, l'astuce utilisé pour utiliser des images est de creer un widget vide et de s'en servir pour déposer les images utilisés. Pour ce plugin, il fallait un moyen pour importer des images. Plutôt que de gérer les images thème par thème, j'ai opté pour implémenter un gestionnaire d'images que l'on pourra utiliser avec tout les plugins de Jeedom.
+
+image::../images/gestionnaire.png[]
+Cliquez sur le bouton ci-dessus pour accéder au gestionnaires d'images.
+
+image::../images/gestionnaire2.png[]
+Le gestionnaire permet de gerer des catégories, celle par défaut est utiisé par le plugin, seul les images importées dans cette categorie seront accessible dans les thèmes. Pour créer une nouvelle catégorie cliquez sur image:../images/gestionnaire3.png[options="responsive"]. +
+Pour importer une image cliquez sur image::../images/gestionnaire4.png[options="responsive"], elle sera importé dans la catégorie sélectionné. +
+
+image::../images/gestionnaire5.png[]
+Une fois l'image importé, image:../images/cadretrash.png[options="responsive"] permet de la supprimer, image::../images/gestionnaire6.png[options="responsive"] ouvrira une boite dialogue donnant les inos suivantes :
+
+* URL: Construit pour être utiliser comme lien locale Jeedom à utilise dans une balise directement par exemple un balise +<img>+.
+* CSS : construit pour être copier coller dans une classe +CSS+ ou un attribut style, pour mettre au choix dans un widget, un design voir sur le +custom.css+.
+* HTTP ; pour utilisation sur un site externe, par exemple un site déporté ou autres, c'est le moins utile s'il porte à confusion je le supprimerais, par contre dans ce cas le /jeedom doit être rajouter manuellement.
 
 '''
 ==== Boutons Personnalisées
+Rn cours de développement
