--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -209,7 +209,7 @@ image::../images/cadrepopover5.png[]
 Permet de choisir une image de fond. Voir <<partie_3.asciidoc#gestionnaire-dimages,Gestionnaire D'Images>>.
 
 image::../images/cadrepopover6.png[]
-Permet de définir le niveau de profondeur du cadre celon les niveaux du mode Design
+Permet de définir le niveau de profondeur du cadre celons les niveaux du mode Design
 
 [alert,warning]
 .Warning
@@ -218,7 +218,7 @@ En théorie il doit rester à -1, implémenter pour des options avancées future
 --
 
 image::../images/cadrepopover7.png[]
-Le premier bouton permet d'ajouter un ligne SVG, le deuxième permet d'éditer la ligne SVG sélectionner dans le selecteur.
+Le premier bouton permet d'ajouter un ligne SVG, le deuxième permet d'éditer la ligne SVG sélectionner dans le sélecteur.
 
 [alert,success]
 .Astuce
@@ -228,7 +228,7 @@ Lorsque une ligne SVG est sélectionnée, elle clignote.
 
 '''
 ==== mode Expert
-Pou éviter de nombreuse fausse manipulation, certain paramètres sont en lecture seule, mais il peut arriver que dans certaine situation on est besoin de les modifier manuellement. De plus le mode expert permet d'acceder à de nouvelles fonctionnalités. Une fois le mode expert validé vous pourrez modifier tous les IDs de plan. +
+Pou éviter de nombreuse fausse manipulation, certain paramètres sont en lecture seule, mais il peut arriver que dans certaine situation on est besoin de les modifier manuellement. De plus le mode expert permet d’accéder à de nouvelles fonctionnalités. Une fois le mode expert validé vous pourrez modifier tous les IDs de plan. +
 
 image::../images/importer.png[]
 Ces deux boutons comme leur nom l'indique permettent d'importer/exporter des thèmes. Pour l'instant cela ne fonctionne que pour la page principale, l'exportation des pages secondaires sera implémentée dans une version ultérieure,  Vous remarquerez l'extension _thm_, elle correspond à une page principale. +
@@ -239,5 +239,5 @@ Ce bouton est à utiliser avec précaution, il va vider la page sélectionnée d
 [alert,danger]
 .Important
 --
-Toutes les données de la page seront éffacées.
+Toutes les données de la page seront effacées.
 --
