--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -31,7 +31,7 @@ include::partie_2.asciidoc[Options avancées]
 
 '''
 === Modules additionnels
-include::partie_3.asciidoc[]
+include::partie_3.asciidoc[Modules additionnels]
 
 '''
 === FAQ
