--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -1,5 +1,5 @@
 :icons:
-:stylesheet:
+:stylesheet:../images/doc.css
 
 == Thèmes
 Plugin servant à creer des thèmes pour le mode Design à partir de la librairie Bootstrap
