--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -45,6 +45,7 @@ Lors de la première utilisation, le plugin récupère les IDs des pages pour me
 [icon="../images/tip.png"]
 [TIP]
 Si le bouton est dégrisé c'est que des modifications ont été apportées au thème qui demande de mettre à jour les pages.
+(nbsp) +
 
 Voici le résultat du thème que nous développons: +
 
