--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -36,9 +36,12 @@ Ce bouton va permettre de créer les pages du mode Design, la page principale au
 
 image::../images/planok.png[]
 image::../images/plannotok.png[]
+{nbsp} +
+
 [icon="../images/important.png"]
 [IMPORTANT]
 Lors de la première utilisation, le plugin récupère les IDs des pages pour mettre à jour le thème, il faut absolument sauvegarder pour ne pas perdre les données.
+
 [icon="../images/tip.png"]
 [TIP]
 Si le bouton est dégrisé c'est que des modifications ont été apportées au thème qui demande de mettre à jour les pages.
@@ -47,6 +50,8 @@ Si le bouton est dégrisé c'est que des modifications ont été apportées au t
 Voici le résultat du thème que nous développons: +
 
 image::../images/designok.png[]
+{nbsp} +
+
 Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Général+ elle correspond à la page secondaire du bouton *home* qui est la page de présentation de votre mode Design. +
 [label label-danger]#Important# *Pensez à sauvegarder votre projet.* +
 {nbsp} +
@@ -56,6 +61,8 @@ Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Gé
 Arrivez à cette étape toutes les pages doivent être créées, ce bouton va permettre d'injecté le code dans la page principale pour pouvoir gérer tout votre Design, après toutes modifications il suffira de cliquez sur ce bouton pour mettre à jour la fenêtre principale. +
 
 image::../images/bootstrapok.png[]
+{nbsp} +
+
 [icon="../images/tip.png"]
 [TIP]
 Si la page de la fenêtre principale n'existe pas le bouton restera grisé, cliquez sur le bouton *Design* pour palier ce problème.
@@ -87,6 +94,7 @@ image::../images/popovercadre.png[]
 
 Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_du_cadre,Popover du Cadre>>
 Il suffit de sauvegarder, et d'utiliser le bouton *Bootstrap* pour mettre à jour la page secondaire _Salon_ dans le mode Design, la dernière étape étant de placer les widgets dans le mode Design. Répetons ces étapes pour les deux autres pièces. +
+
 [icon="../images/tip.png"]
 [TIP]
 Vous pouvez très bien injecter le code avec le bouton *Bootstrap* sans sauvegarder, pour faire des test ou autre.
@@ -118,6 +126,7 @@ image::../images/popoversvg.png[]
 
 Ce dernier popover va vous servir à déplacer la *ligne SVG* à l'endroit désiré, une ligne SVG est composée de quatre parties, un petit rectangle appelé +Début+, une ligne appelée +1er partie+, une ligne appelée +2eme partie+ et un dernier rectangle appelé +Fin+. +
 Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:../images/trash.png[options="responsive"] en haut à droite du popover permet d'effacer la ligne SVG. Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. Le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de Jeedom. +
+
 [icon="../images/tip.png"]
 [TIP]
 Appuyez sur touche +Shift+ en même temps multiplie le déplacement par 10.
@@ -133,6 +142,7 @@ Il suffit de faire la même chose pour les autres pièces. +
 '''
 ==== Conclusion
 Voila, votre thème et votre Design sont finalisés. Vous pouvez très bien le rajouter dans votre profil Jeedom pour y accéder directement. Les dernières modifications ont permis de rendre la page principale en lecture seule, et de pouvoir implémenter l'affichage automatique de la page 'Home'. Le plugin offre d'autres possibilités, le chapitre suivant va vous permettre de toutes les explorer. +
+
 [icon="../images/tip.png"]
 [TIP]
 Il est possible de créer des profils 'invité', il suffit au niveau du profil Jeedom de pointer vers la pièce désirée au lieu de la page principale, ce qui permettra à l'invité d'accéder à toutes les fonctions de la pièce sans avoir accès à la barre de menu et de ce faites au autres pages secondaires.
