--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -1,6 +1,6 @@
 :icons:
 [paradef-default]
-text-align"justify"
+text-align="justify"
 
 == Thèmes
 Plugin servant à creer des thèmes pour le mode Design à partir de la librairie Bootstrap
